--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false, // denna
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
