--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
     "@types/next": "^8.0.7",
+    "@uploadthing/react": "^7.3.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,14 +29,18 @@
     "firebase-admin": "^13.3.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "markdown": "^0.5.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-modal": "^3.16.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
